# Lumen-AI

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  RELEASE_NOTES.md  docker-compose.yml  nginx.conf  package.json  start-web.sh  start.bat  start.sh
.claude/: settings.local.json
.github/workflows/: build-windows.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  STACK.md  (+4 more)
backend/: .env.example  lumen-backend.spec  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  chat.py  highlight.py  paper.py
backend/app/routers/: chat.py  files.py  highlights.py  papers.py  subscription.py
backend/app/schemas/: chat.py  file_browser.py  highlight.py  paper.py
backend/app/services/: context_service.py  file_service.py  llm_service.py  pdf_service.py  subscription_service.py
backend/app/utils/: auth.py
backend/migrations/: 006_create_profiles.sql
docs/: CNAME  auth.html  checkout-success.html  checkout.html  features.html  index.html  install-macos.html  install-windows.html  pricing.html  privacy.html  profile.html  shared-auth.js  style.css  terms.html
electron/: afterPack.js  electron-builder.json  main.js  package-lock.json  package.json  preload.js  secureStore.js  tray.js  updater.js
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-backend.bat  build-backend.sh  build-frontend.bat  build-frontend.sh  build.js  dev.js  generate-icon.py
(+106 files in other folders)
